Add mongoDB and models

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "body-parser": "^1.15.0",
     "ejs": "^2.4.1",
     "express": "^4.13.4",
+    "mongoose": "^4.4.8",
     "supervisor": "^0.9.1"
   }
 }
