--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "ejs": "^2.4.1",
     "express": "^4.13.4",
     "express-session": "^1.13.0",
+    "moment": "^2.12.0",
     "mongoose": "^4.4.8",
     "supervisor": "^0.9.1"
   }
